--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-  "name": "express-sql",
+  "name": "ts-express-sql",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc && node dist/index.js"
+    "dev": "tsc && node dist/index.js | pino-pretty"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^5.0.0-beta.1"
+    "express": "^5.0.0-beta.1",
+    "pino": "^8.17.2",
+    "pino-http": "^8.6.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
     "@types/node": "^20.10.5",
+    "pino-pretty": "^10.3.1",
     "typescript": "^5.3.3"
   }
 }
