--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^5.0.0-beta.1",
     "pino": "^8.17.2",
     "pino-http": "^8.6.1"
