--- a/package.json
+++ b/package.json
@@ -12,12 +12,19 @@
   "dependencies": {
     "dotenv": "^16.3.1",
     "express": "^5.0.0-beta.1",
+    "helmet": "^7.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1",
     "pino": "^8.17.2",
     "pino-http": "^8.6.1"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/node": "^20.10.5",
+    "@types/passport": "^1.0.16",
+    "@types/passport-jwt": "^3.0.13",
     "pino-pretty": "^10.3.1",
     "typescript": "^5.3.3"
   }
