--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pino": "^8.17.2",
-    "pino-http": "^8.6.1"
+    "pino-http": "^8.6.1",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
