--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsc && node dist/index.js"
+    "dev": "tsc && node dist/index.js",
+    "test": "vitest"
   },
   "keywords": [],
   "author": "",
@@ -27,6 +28,7 @@
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^3.0.13",
     "pino-pretty": "^10.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "vitest": "^1.1.0"
   }
 }
