--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "@types/node": "^20.10.5",
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^3.0.13",
+    "@types/supertest": "^6.0.2",
     "pino-pretty": "^10.3.1",
+    "supertest": "^6.3.3",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
   }
