--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "index.js",
   "scripts": {
     "dev": "tsc && node dist/index.js",
-    "test": "vitest"
+    "test": "vitest",
+    "lint": "eslint src/ test/ --ext .ts",
+    "format": "prettier --write src/**/*.ts test/**/*.ts"
   },
   "keywords": [],
   "author": "",
@@ -28,7 +30,14 @@
     "@types/passport": "^1.0.16",
     "@types/passport-jwt": "^3.0.13",
     "@types/supertest": "^6.0.2",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "eslint": "^8.56.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-import-resolver-typescript": "^3.6.1",
+    "eslint-plugin-import": "^2.29.1",
     "pino-pretty": "^10.3.1",
+    "prettier": "^3.1.1",
     "supertest": "^6.3.3",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
