--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.7.1",
     "dotenv": "^16.3.1",
     "express": "^5.0.0-beta.1",
     "helmet": "^7.1.0",
@@ -38,6 +39,7 @@
     "eslint-plugin-import": "^2.29.1",
     "pino-pretty": "^10.3.1",
     "prettier": "^3.1.1",
+    "prisma": "^5.7.1",
     "supertest": "^6.3.3",
     "typescript": "^5.3.3",
     "vitest": "^1.1.0"
