--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^5.0.0-beta.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nocache": "^4.0.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
